test #3 with fix phone portrait width 350px

--- a/Kreise.html
+++ b/Kreise.html
@@ -3467,7 +3467,7 @@ body {
 </style>
 
 
-<style type="text/css">.navbar-logo img {margin-right: 12px;height: 40px;}#dashboard-container {max-width: 850px;}@media screen and (max-device-width: 600px)and (orientation: portrait) {#dashboard-container {width: auto;}}.value-box .caption {white-space: pre-line;}</style>
+<style type="text/css">.navbar-logo img {margin-right: 12px;height: 40px;}#dashboard-container {max-width: 850px;}@media screen and (max-device-width: 600px)and (orientation: portrait) {#dashboard-container {width: 350px;}}.value-box .caption {white-space: pre-line;}</style>
 
 </head>
 
