--- a/Impressum.html
+++ b/Impressum.html
@@ -886,7 +886,7 @@ body {
 </style>
 
 
-<style type="text/css">.navbar-logo img {margin-right: 12px;height: 40px;}@media screen and (min-device-width: 900px) {#dashboard-container {max-width: 850px;}}.value-box .caption {white-space: pre-line;}</style>
+<style type="text/css">.navbar-logo img {margin-right: 12px;height: 40px;}#dashboard-container {max-width: 850px;}.value-box .caption {white-space: pre-line;}</style>
 
 </head>
 
