--- a/Impressum.html
+++ b/Impressum.html
@@ -2736,6 +2736,10 @@ window.FlexDashboardComponents.push({
 
 <div id="dashboard-container">
 
+<div id="row" class="section level2">
+<h2>Row <!--{data-height=100}--></h2>
+<div id="impressum" class="section level3">
+<h3><strong>Impressum</strong></h3>
 <p><strong>Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland (Stiftung des bürgerlichen Rechts)</strong></p>
 <p>Salzufer 8<br />
 10587 Berlin<br />
@@ -2753,6 +2757,8 @@ Internet: <a href="http://www.zi.de">www.zi.de</a></p>
 <p>Dr. Dominik Graf von Stillfried</p>
 <p><em>USt-IdNr.: DE239451993</em></p>
 <p>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen.</p>
+</div>
+</div>
 
 </div>
 
