update manually html and text new method

--- a/Impressum.html
+++ b/Impressum.html
@@ -2714,7 +2714,7 @@ window.FlexDashboardComponents.push({
 <div id="dashboard-container">
 
 <div id="row" class="section level2">
-<h2>Row <!--{data-height=100}--></h2>
+<h2>Row</h2>
 <div id="impressum" class="section level3">
 <h3><strong>Impressum</strong></h3>
 <p><strong>Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland (Stiftung des bürgerlichen Rechts)</strong></p>
