update text risikostufe kreise tabelle

--- a/Kreise.html
+++ b/Kreise.html
@@ -5329,7 +5329,7 @@ window.FlexDashboardComponents.push({
 <h2>Row</h2>
 <div id="überblick-zu-den-kennzahlen-der-kreise" class="section level3">
 <h3><strong>Überblick zu den Kennzahlen der Kreise</strong></h3>
-<p>Nachfolgend erhalten Sie einen Überblick zur Situation der einzelnen Kreise. Bitte beachten Sie, dass der Indikator Vorwarnzeit auf Ebene der Kreise und Städte nicht losgelöst von der Situation in der jeweiligen Region betrachtet werden sollte. Wir berichten deshalb eine Vorwarnzeit lokal auf Kreisebene sowie die Vorwarnzeit der übergeordneten Raumordnungsregion (ROR).</p>
+<p>Nachfolgend erhalten Sie einen Überblick zur Situation der einzelnen Kreise. Bitte beachten Sie, dass der Indikator Vorwarnzeit auf Ebene der Kreise und Städte nicht losgelöst von der Situation in der jeweiligen Region betrachtet werden sollte. Wir berichten deshalb eine Vorwarnzeit der übergeordneten Raumordnungsregion (ROR) sowie die Vorwarnzeit lokal auf Kreisebene. Die Risikostufe bezieht sich auf die Unterstützungsnotwendigkeit durch besondere Maßnahmen im medizinischen bzw. mittelbar im pflegerischen Bereich und erlaubt so eine weitere Differenzierung der Kreise.</p>
 </div>
 </div>
 <div id="row-1" class="section level2">
