--- a/R/adhoc_analyses/Lockdown_Effect.html
+++ b/R/adhoc_analyses/Lockdown_Effect.html
@@ -1694,7 +1694,7 @@ goal_daily = round((population/100000)*(50)/7)</code></pre>
     mutate(Reduction_daily = 1*effect^.1,
            days_till_goal = round((-1*log(current_cases_daily/goal_daily)/log(Reduction_daily))),
     date = lubridate::now()-lubridate::days(1)+lubridate::days(days_till_goal),
-    result = ifelse(effect&lt;1,format(date),&quot;never&quot;))
+    result = ifelse(effect&lt;1,format(date,format=&quot;%d.%M.%Y&quot;),&quot;never&quot;))
   newdf$result
 }</code></pre>
 </div>
@@ -1704,7 +1704,7 @@ goal_daily = round((population/100000)*(50)/7)</code></pre>
 <pre class="r"><code>all_scens %&gt;% mutate(&quot;goal 50&quot;=estimate_duration(.,50),&quot;gaol 20&quot;=estimate_duration(.,7))</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
-{"columns":[{"label":["scenario"],"name":[1],"type":["chr"],"align":["left"]},{"label":["effect"],"name":[2],"type":["dbl"],"align":["right"]},{"label":["goal 50"],"name":[3],"type":["chr"],"align":["left"]},{"label":["gaol 20"],"name":[4],"type":["chr"],"align":["left"]}],"data":[{"1":"light","2":"1.5427500","3":"never","4":"never"},{"1":"light b 1.1.7","2":"1.7765000","3":"never","4":"never"},{"1":"hard","2":"0.6942375","3":"2021-02-13 09:00:02","4":"2021-04-08 09:00:02"},{"1":"hard b 1.1.7","2":"0.7994250","3":"2021-03-11 09:00:02","4":"2021-06-07 09:00:02"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["scenario"],"name":[1],"type":["chr"],"align":["left"]},{"label":["effect"],"name":[2],"type":["dbl"],"align":["right"]},{"label":["goal 50"],"name":[3],"type":["chr"],"align":["left"]},{"label":["gaol 20"],"name":[4],"type":["chr"],"align":["left"]}],"data":[{"1":"light","2":"1.5427500","3":"never","4":"never"},{"1":"light b 1.1.7","2":"1.7765000","3":"never","4":"never"},{"1":"hard","2":"0.6942375","3":"13.02.2021","4":"08.02.2021"},{"1":"hard b 1.1.7","2":"0.7994250","3":"11.02.2021","4":"07.02.2021"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
