update new plot inzidenz kw 53

--- a/Impressum.html
+++ b/Impressum.html
@@ -2758,6 +2758,10 @@ Internet: <a href="http://www.zi.de">www.zi.de</a></p>
 <p><em>USt-IdNr.: DE239451993</em></p>
 <p>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen.</p>
 </div>
+<div id="datenschutzhinweis" class="section level3">
+<h3>Datenschutzhinweis</h3>
+<p>Um die durch das Zi durchgeführten Berechnungen zur COVID-19-Pandemie vollständig zu dokumentieren und so nachvollziehbar zu machen, wird die Quellcodeverwaltungsplattform github.com genutzt. Auf der Plattform ist der Quellcode für das vorliegende Dashboard, inklusive aller Änderungen, vollumfänglich unter [github.com/zidatalab/covid19dashboard] (<a href="https://github.com/zidatalab/covid19dashboard" class="uri">https://github.com/zidatalab/covid19dashboard</a>) dokumentiert. Für die Nutzung dieser Internetseite gelten darum die Datenschutzinformationen von github.com <a href="https://docs.github.com/en/free-pro-team@latest/github/site-policy/github-privacy-statement">(Github Privacy Statement)</a>.</p>
+</div>
 </div>
 
 </div>
