--- a/Report.html
+++ b/Report.html
@@ -22,7 +22,7 @@ window.FlexDashboardComponents = [];
 </script>
 
 <script id="flexdashboard-navbar" type="application/json">
-[{"title":"Dashboard","href":"Start.html","align":"left"},{"title":"Bundesländer","href":"Bundeslaender.html","align":"left"},{"title":"Kreise","href":"Kreise.html","align":"left"},{"title":"KBV-Report","href":"Report.html","align":"left"},{"title":"Impressum/Datenschutz","href":"Impressum.html","align":"left"}]
+[{"title":"Dashboard","href":"Start.html","align":"left"},{"title":"Bundesländer","href":"Bundeslaender.html","align":"left"},{"title":"Kreise","href":"Kreise.html","align":"left"},{"title":"Projektion","href":"Projektion.html","align":"left"},{"title":"KBV-Report","href":"Report.html","align":"left"},{"title":"Impressum/Datenschutz","href":"Impressum.html","align":"left"}]
 </script>
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
